# weditor

./: .gitignore  requirements.txt  server.sh  setup.cfg
weditor/: __main__.py  sound.py
weditor/static/: style.css
weditor/static/js/: index.js  pcm-player.js
weditor/templates/: index.html  list.html
weditor/web/: device.py  ipyshell-console.py
weditor/web/handlers/: mini.py  page.py  shell.py
